# freshmint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
freshmint/: __init__.py  binary.py  manifest.py  mint.py  types.py
tests/: test_integration.py  test_skeleton.py
